html and css update

--- a/Client/index.html
+++ b/Client/index.html
@@ -5,17 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script differ src="script.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Italianno&display=swap" rel="stylesheet">
     <title>Common Era</title>
 </head>
 <body>
     <header>
 <img src="https://d44nbjjo4iet8.cloudfront.net/ckragxf0p4ed3xokgy3n4lywbqpe" class="refreshLogo"> 
+<div class="buttons">
 <input type = "text" placeholder="search" id="searchBar"> <input type="submit" id="search">
+</div>
     </header>
-
-    <div class = products> 
+    <div class="titleDesc">
+<img src="https://cellar-c2.services.clever-cloud.com/www.listy.fr/store/05a56c9ab2d9c16784f14b120362320e.jpg" class="title">
+<h2>Fine jewelry inspired by myth and magic.</h2>
+</div>
+    <div class = "products"> 
         <!-- products pulled here -->
     </div>
-
+    <div class = "oneProduct">
+        <!-- individual product here -->
+    </div>
 </body>
 </html>
