script aesthetic edit

--- a/Client/index.html
+++ b/Client/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Italianno&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" sizes="84x84" href="https://commonera.com/cdn/shop/files/Favicon_grid.png?crop=center&height=32&v=1614324284&width=32">
     <title>Common Era</title>
 </head>
 <body>
