final style changes and prep for popup descriptions

--- a/Client/index.html
+++ b/Client/index.html
@@ -27,7 +27,7 @@
     <div class="products"> 
         <!-- products pulled here -->
     </div>
-    <div class = "oneProduct">
+    <div class="oneProduct" style="display: none;">
         <!-- individual product here -->
     </div>
 </body>
