got the image and title to link to the correct id

--- a/Client/display-products.html
+++ b/Client/display-products.html
@@ -20,15 +20,17 @@
 <input type = "text" placeholder="search" id="searchBar"> <input type="submit" id="search">
 </div>
     </header>
-    <div class="titleDesc">
-<img src="https://cellar-c2.services.clever-cloud.com/www.listy.fr/store/05a56c9ab2d9c16784f14b120362320e.jpg" class="title">
-<h1>Fine jewelry inspired by myth and magic.</h1>
+    
 </div>
-    <div class="products"> 
-        <!-- products pulled here -->
+<body>
+    <div class="product-details">
+        <img id="product-image" src="" alt="">
+        <h1 id="product-name"></h1>
+        <p id="product-description"></p>
+        <p id="product-price"></p>
+        <p id="metal-type"></p>
     </div>
-    <div class="oneProduct">
-        <!-- individual product here -->
-    </div>
+
 </body>
+</html>
 </html>
