got second page to work and started styling

--- a/Client/display-products.html
+++ b/Client/display-products.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="productStyle.css">
     <!-- Include Axios library -->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script differ src="script.js"></script>
+    <script differ src="productScript.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Italianno&display=swap" rel="stylesheet">
@@ -24,11 +24,7 @@
 </div>
 <body>
     <div class="product-details">
-        <img id="product-image" src="" alt="">
-        <h1 id="product-name"></h1>
-        <p id="product-description"></p>
-        <p id="product-price"></p>
-        <p id="metal-type"></p>
+        <!-- product info -->
     </div>
 
 </body>
