finished styling and added ascending/descending

--- a/Client/index.html
+++ b/Client/index.html
@@ -24,6 +24,11 @@
 <img src="https://cellar-c2.services.clever-cloud.com/www.listy.fr/store/05a56c9ab2d9c16784f14b120362320e.jpg" class="title">
 <h1>Fine jewelry inspired by myth and magic.</h1>
 </div>
+<div class="sortButtons">
+<button id="sortButtonUp" class="priceButton">Price: low to high</button>
+<button id="sortButtonDown" class="priceButton">Price: high to low</button>
+</div>
+
     <div class="products"> 
         <!-- products pulled here -->
     </div>
